src/main/java/spl/antlr/SPLParser.java
<<<<<<< OURS
// Generated from SPL.g4 by ANTLR 4.13.2

    package spl.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, NUM=2, RETURN=3, PRINT=4, NOP=5, COMMENT=6, IF=7, THEN=8, ELSE=9, 
		DO=10, WHILE=11, UNTIL=12, MOD=13, ADD=14, SUB=15, MUL=16, DIV=17, NEG=18, 
		NOT=19, AND=20, OR=21, EQ=22, LARGER=23, LESSER=24, USER_ID=25, NUM_LIT=26, 
		STRING=27, LEFT_PAREN=28, RIGHT_PAREN=29, LEFT_BRACE=30, RIGHT_BRACE=31, 
		COLON=32, SEMICOLON=33, ASSIGN_OP=34, WS=35;
	public static final int
		RULE_spl_prog = 0, RULE_p = 1, RULE_v_decl = 2, RULE_f_decl = 3, RULE_f_type = 4, 
		RULE_algo = 5, RULE_instr = 6, RULE_outp = 7, RULE_call = 8, RULE_input = 9, 
		RULE_assign = 10, RULE_term = 11, RULE_branch = 12, RULE_bool = 13, RULE_loop = 14, 
		RULE_cond = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"spl_prog", "p", "v_decl", "f_decl", "f_type", "algo", "instr", "outp", 
			"call", "input", "assign", "term", "branch", "bool", "loop", "cond"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'num'", "'return'", "'print'", "'nop'", "'comment'", 
			"'if'", "'then'", "'else'", "'do'", "'while'", "'until'", "'mod'", "'add'", 
			"'sub'", "'mul'", "'div'", "'neg'", "'not'", "'and'", "'or'", "'eq'", 
			"'larger'", "'lesser'", null, null, null, "'('", "')'", "'{'", "'}'", 
			"':'", "';'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID", "NUM", "RETURN", "PRINT", "NOP", "COMMENT", "IF", "THEN", 
			"ELSE", "DO", "WHILE", "UNTIL", "MOD", "ADD", "SUB", "MUL", "DIV", "NEG", 
			"NOT", "AND", "OR", "EQ", "LARGER", "LESSER", "USER_ID", "NUM_LIT", "STRING", 
			"LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "COLON", "SEMICOLON", 
			"ASSIGN_OP", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SPL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Spl_progContext extends ParserRuleContext {
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SPLParser.EOF, 0); }
		public Spl_progContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spl_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterSpl_prog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitSpl_prog(this);
		}
	}

	public final Spl_progContext spl_prog() throws RecognitionException {
		Spl_progContext _localctx = new Spl_progContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spl_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			p();
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PContext extends ParserRuleContext {
		public V_declContext v_decl() {
			return getRuleContext(V_declContext.class,0);
		}
		public List<TerminalNode> COLON() { return getTokens(SPLParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(SPLParser.COLON, i);
		}
		public F_declContext f_decl() {
			return getRuleContext(F_declContext.class,0);
		}
		public AlgoContext algo() {
			return getRuleContext(AlgoContext.class,0);
		}
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitP(this);
		}
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_p);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			v_decl();
			setState(36);
			match(COLON);
			setState(37);
			f_decl();
			setState(38);
			match(COLON);
			setState(39);
			algo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class V_declContext extends ParserRuleContext {
		public TerminalNode USER_ID() { return getToken(SPLParser.USER_ID, 0); }
		public V_declContext v_decl() {
			return getRuleContext(V_declContext.class,0);
		}
		public V_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterV_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitV_decl(this);
		}
	}

	public final V_declContext v_decl() throws RecognitionException {
		V_declContext _localctx = new V_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_v_decl);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case USER_ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				match(USER_ID);
				setState(42);
				v_decl();
				}
				break;
			case RIGHT_PAREN:
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class F_declContext extends ParserRuleContext {
		public F_typeContext f_type() {
			return getRuleContext(F_typeContext.class,0);
		}
		public F_declContext f_decl() {
			return getRuleContext(F_declContext.class,0);
		}
		public F_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterF_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitF_decl(this);
		}
	}

	public final F_declContext f_decl() throws RecognitionException {
		F_declContext _localctx = new F_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_f_decl);
		try {
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
			case NUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				f_type();
				setState(47);
				f_decl();
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class F_typeContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(SPLParser.VOID, 0); }
		public TerminalNode USER_ID() { return getToken(SPLParser.USER_ID, 0); }
		public List<TerminalNode> LEFT_PAREN() { return getTokens(SPLParser.LEFT_PAREN); }
		public TerminalNode LEFT_PAREN(int i) {
			return getToken(SPLParser.LEFT_PAREN, i);
		}
		public V_declContext v_decl() {
			return getRuleContext(V_declContext.class,0);
		}
		public List<TerminalNode> RIGHT_PAREN() { return getTokens(SPLParser.RIGHT_PAREN); }
		public TerminalNode RIGHT_PAREN(int i) {
			return getToken(SPLParser.RIGHT_PAREN, i);
		}
		public TerminalNode LEFT_BRACE() { return getToken(SPLParser.LEFT_BRACE, 0); }
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(SPLParser.RETURN, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(SPLParser.RIGHT_BRACE, 0); }
		public TerminalNode NUM() { return getToken(SPLParser.NUM, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public F_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterF_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitF_type(this);
		}
	}

	public final F_typeContext f_type() throws RecognitionException {
		F_typeContext _localctx = new F_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_f_type);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(VOID);
				setState(53);
				match(USER_ID);
				setState(54);
				match(LEFT_PAREN);
				setState(55);
				v_decl();
				setState(56);
				match(RIGHT_PAREN);
				setState(57);
				match(LEFT_BRACE);
				setState(58);
				p();
				setState(59);
				match(RETURN);
				setState(60);
				match(RIGHT_BRACE);
				}
				break;
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(NUM);
				setState(63);
				match(USER_ID);
				setState(64);
				match(LEFT_PAREN);
				setState(65);
				v_decl();
				setState(66);
				match(RIGHT_PAREN);
				setState(67);
				match(LEFT_BRACE);
				setState(68);
				p();
				setState(69);
				match(RETURN);
				setState(70);
				match(LEFT_PAREN);
				setState(71);
				term();
				setState(72);
				match(RIGHT_PAREN);
				setState(73);
				match(RIGHT_BRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlgoContext extends ParserRuleContext {
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SPLParser.SEMICOLON, 0); }
		public AlgoContext algo() {
			return getRuleContext(AlgoContext.class,0);
		}
		public AlgoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterAlgo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitAlgo(this);
		}
	}

	public final AlgoContext algo() throws RecognitionException {
		AlgoContext _localctx = new AlgoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_algo);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRINT:
			case NOP:
			case COMMENT:
			case IF:
			case DO:
			case WHILE:
			case UNTIL:
			case USER_ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				instr();
				setState(78);
				match(SEMICOLON);
				setState(79);
				algo();
				}
				break;
			case EOF:
			case RETURN:
			case RIGHT_BRACE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(SPLParser.PRINT, 0); }
		public OutpContext outp() {
			return getRuleContext(OutpContext.class,0);
		}
		public TerminalNode NOP() { return getToken(SPLParser.NOP, 0); }
		public TerminalNode COMMENT() { return getToken(SPLParser.COMMENT, 0); }
		public TerminalNode STRING() { return getToken(SPLParser.STRING, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public InstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterInstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitInstr(this);
		}
	}

	public final InstrContext instr() throws RecognitionException {
		InstrContext _localctx = new InstrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instr);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(PRINT);
				setState(85);
				outp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(NOP);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(COMMENT);
				setState(88);
				match(STRING);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				assign();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				call();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				branch();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				loop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutpContext extends ParserRuleContext {
		public TerminalNode LEFT_PAREN() { return getToken(SPLParser.LEFT_PAREN, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(SPLParser.RIGHT_PAREN, 0); }
		public TerminalNode STRING() { return getToken(SPLParser.STRING, 0); }
		public OutpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterOutp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitOutp(this);
		}
	}

	public final OutpContext outp() throws RecognitionException {
		OutpContext _localctx = new OutpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_outp);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_PAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(LEFT_PAREN);
				setState(96);
				term();
				setState(97);
				match(RIGHT_PAREN);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CallContext extends ParserRuleContext {
		public TerminalNode USER_ID() { return getToken(SPLParser.USER_ID, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(SPLParser.LEFT_PAREN, 0); }
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(SPLParser.RIGHT_PAREN, 0); }
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitCall(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(USER_ID);
			setState(103);
			match(LEFT_PAREN);
			setState(104);
			input();
			setState(105);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 101179392L) != 0)) {
				{
				{
				setState(107);
				term();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public TerminalNode USER_ID() { return getToken(SPLParser.USER_ID, 0); }
		public TerminalNode ASSIGN_OP() { return getToken(SPLParser.ASSIGN_OP, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(USER_ID);
			setState(114);
			match(ASSIGN_OP);
			setState(115);
			term();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public TerminalNode USER_ID() { return getToken(SPLParser.USER_ID, 0); }
		public TerminalNode NUM_LIT() { return getToken(SPLParser.NUM_LIT, 0); }
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public TerminalNode MOD() { return getToken(SPLParser.MOD, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(SPLParser.LEFT_PAREN, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(SPLParser.RIGHT_PAREN, 0); }
		public TerminalNode ADD() { return getToken(SPLParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(SPLParser.SUB, 0); }
		public TerminalNode MUL() { return getToken(SPLParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(SPLParser.DIV, 0); }
		public TerminalNode NEG() { return getToken(SPLParser.NEG, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_term);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(USER_ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(NUM_LIT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				call();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				match(MOD);
				setState(121);
				match(LEFT_PAREN);
				setState(122);
				term();
				setState(123);
				term();
				setState(124);
				match(RIGHT_PAREN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(126);
				match(ADD);
				setState(127);
				match(LEFT_PAREN);
				setState(128);
				term();
				setState(129);
				term();
				setState(130);
				match(RIGHT_PAREN);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				match(SUB);
				setState(133);
				match(LEFT_PAREN);
				setState(134);
				term();
				setState(135);
				term();
				setState(136);
				match(RIGHT_PAREN);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(138);
				match(MUL);
				setState(139);
				match(LEFT_PAREN);
				setState(140);
				term();
				setState(141);
				term();
				setState(142);
				match(RIGHT_PAREN);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(144);
				match(DIV);
				setState(145);
				match(LEFT_PAREN);
				setState(146);
				term();
				setState(147);
				term();
				setState(148);
				match(RIGHT_PAREN);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(150);
				match(NEG);
				setState(151);
				match(LEFT_PAREN);
				setState(152);
				term();
				setState(153);
				match(RIGHT_PAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BranchContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(SPLParser.IF, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public TerminalNode THEN() { return getToken(SPLParser.THEN, 0); }
		public List<TerminalNode> LEFT_BRACE() { return getTokens(SPLParser.LEFT_BRACE); }
		public TerminalNode LEFT_BRACE(int i) {
			return getToken(SPLParser.LEFT_BRACE, i);
		}
		public List<AlgoContext> algo() {
			return getRuleContexts(AlgoContext.class);
		}
		public AlgoContext algo(int i) {
			return getRuleContext(AlgoContext.class,i);
		}
		public List<TerminalNode> RIGHT_BRACE() { return getTokens(SPLParser.RIGHT_BRACE); }
		public TerminalNode RIGHT_BRACE(int i) {
			return getToken(SPLParser.RIGHT_BRACE, i);
		}
		public TerminalNode ELSE() { return getToken(SPLParser.ELSE, 0); }
		public BranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).enterBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPLListener ) ((SPLListener)listener).exitBranch(this);
		}
	}
